@@ -34,6 +34,11 @@ apt (0.9.7.8) UNRELEASED; urgency=low
   * apt-pkg/indexrecords.cc:
     - support '\r' in the Release file
 
+  [ David Kalnischkies ]
+  * apt-pkg/depcache.cc:
+    - prefer to install packages which have an already installed M-A:same
+      sibling while choosing providers (LP: #1130419)
+
  -- Christian Perrier <bubulle@debian.org>  Mon, 24 Dec 2012 07:01:20 +0100
 
 apt (0.9.7.7) unstable; urgency=low
